--- a/p8105_hw6_yl5839.Rmd
+++ b/p8105_hw6_yl5839.Rmd
@@ -42,9 +42,54 @@ weather_df =
 
 
 ```{r}
+boot_fit = 
+  weather_df |> 
+  modelr::bootstrap(n = 5000) |> 
+  mutate(
+    models = map(strap, \(df) lm(tmax ~ tmin, data = df)),
+    results = map(models, broom::tidy),
+    glance = map(models, broom::glance))|> 
+    select(-strap, -models)
 
 
+log_beta = boot_fit |> 
+  unnest(results) |> 
+  select(.id, term, estimate) |> 
+  pivot_wider(
+    names_from = term,
+    values_from = estimate
+  ) |> 
+  rename(hat_b0 = `(Intercept)`, 
+         hat_b1 = tmin) |> 
+  mutate(log_b = log(hat_b0 * hat_b1))
+  
+  
+r_sq = boot_fit |> 
+  unnest(glance) |> 
+  select(.id, r.squared) 
 
+est_df = left_join(log_beta, r_sq) |> 
+  select(.id, log_b, r.squared) |> 
+  pivot_longer(
+    log_b:r.squared,
+    names_to = 'term',
+    values_to = 'estimate'
+  )
+
+labels <- as_labeller(c(
+  r.squared = "r^2",
+  log_b = "log(hat(beta)[0]%*%hat(beta)[1])"), label_parsed)
+
+est_df |> 
+  ggplot(aes(x = estimate, fill = term, color = term)) +
+  geom_histogram(binwidth = 0.01, alpha = 0.7) +
+  labs(title = "Distribution of Estimates from 5000 Bootstrap Samples") +
+  facet_grid(~term, labeller = labels)
+  
+```
+
+
+```{r}
 
 ```
 
