--- a/p8105_hw6_yl5839.md
+++ b/p8105_hw6_yl5839.md
@@ -6,6 +6,8 @@ Yuying Lu
 ``` r
 library(tidyverse)
 library(glmnet)
+library(modelr)
+library(purrr)
 theme_set(theme(legend.position = "bottom"))
 
 options(
@@ -37,7 +39,7 @@ weather_df =
 set.seed(1000)
 boot_fit = 
   weather_df |> 
-  modelr::bootstrap(n = 5000) |> 
+  bootstrap(n = 5000) |> 
   mutate(
     models = map(strap, \(df) lm(tmax ~ tmin, data = df)),
     results = map(models, broom::tidy),
@@ -340,6 +342,89 @@ bwt_df =
             4 ~ "puerto rican",
             8 ~ "other"),
     mrace = fct_infreq(mrace),
-    malform = as.logical(malform)) |> 
-  sample_n(200)
+    malform = as.logical(malform)) 
 ```
+
+## Modeling Process
+
+I first fit the model includes all the variable and then select
+significant variables with p-value less than 0.05.
+
+``` r
+full_model = lm(bwt ~ ., data = bwt_df)
+
+summary(full_model)$coefficients |>
+  as.data.frame() |>
+  rownames_to_column("variable") |>
+  filter(`Pr(>|t|)` < 0.05) |>
+  pull(variable)
+```
+
+    ## [1] "(Intercept)"   "babysexfemale" "bhead"         "blength"      
+    ## [5] "delwt"         "gaweeks"       "mraceblack"    "parity"       
+    ## [9] "smoken"
+
+Then I select these significant variables `babysex`, `bhead`, `blength`,
+`delwt`, `gaweeks`, `mrace` and `parity` as the predictors to fit a new
+model.
+
+``` r
+my_model = lm(bwt ~ babysex + bhead + blength + delwt + gaweeks + mrace + parity,
+              data = bwt_df)
+my_model_df =  
+  bwt_df |> 
+  add_predictions(my_model) |>
+  add_residuals(my_model)
+
+ggplot(my_model_df, aes(x = pred, y = resid)) +
+  geom_point(size = 0.5, alpha = 0.3) +
+  labs(x = "Fitted Values", y = "Residuals", title = "Residuals vs. Fitted Values")
+```
+
+![](p8105_hw6_yl5839_files/figure-gfm/unnamed-chunk-13-1.png)<!-- -->
+
+## Use `crossv_mc()` in purrr for Model Comparison
+
+Compare my proposed model with the following two models in terms of the
+cross-validated prediction error:
+
+- One using length at birth and gestational age as predictors (main
+  effects only)
+- One using head circumference, length, sex, and all interactions
+  (including the three-way interaction) between these
+
+We repeat the data splitting for 100 times and get a sense of variance
+in prediction error and can compare prediction error distributions
+across models. According to the violin plot below, my suggested model
+overwhelm the other two models.
+
+``` r
+cv_data = 
+  crossv_mc(bwt_df, 100) |> 
+  mutate(
+    train = map(train, as_tibble),
+    test = map(test, as_tibble)
+  ) |> 
+  mutate(
+    my_model = map(train, \(df) lm(bwt ~ babysex + bhead + blength + delwt + gaweeks + mrace + parity, data = df)),
+    model_1 = map(train, \(df) lm(bwt ~ blength + gaweeks, data = df)),
+    model_2 = map(train, \(df) lm(bwt ~ bhead * blength * babysex, data = df))
+  ) |> 
+  mutate(
+    rmse_my_model = map2_dbl(my_model, test, \(mod, df) rmse(model = mod, data = df)),
+    rmse_model_1 = map2_dbl(model_1, test, \(mod, df) rmse(model = mod, data = df)),
+    rmse_model_2 = map2_dbl(model_2, test, \(mod, df) rmse(model = mod, data = df))
+  ) 
+
+cv_data |> 
+  select(starts_with("rmse")) |> 
+  pivot_longer(
+    everything(),
+    names_to = "model", 
+    values_to = "rmse",
+    names_prefix = "rmse_") |> 
+  mutate(model = fct_inorder(model)) |> 
+  ggplot(aes(x = model, y = rmse)) + geom_violin()
+```
+
+![](p8105_hw6_yl5839_files/figure-gfm/unnamed-chunk-14-1.png)<!-- -->
